--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^6.6.9",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.20",
@@ -30,5 +31,8 @@
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3",
     "typescritp": "^1.0.0"
+  },
+  "dependencies": {
+    "axios": "^1.7.3"
   }
 }
